
Availability
------------
This release is not yet available.

Supported platforms
-------------------
This release is intended to work on systems with the following minimal
requirements (Note:  not all features available on all platforms):

New user-visible features
-------------------------
- (wifi) Preamble detection can now be modelled.
- (wifi) 802.11ax spatial reuse is now supported.

Bugs fixed
----------

- Bug 2470 - wifi: Handshake to setup the Block Ack Agreement is not protected
- Bug 2992 - lte: Send method of the LteUeNetDevice doesn't use protocolNumber parameter
- Bug 2997 - lte: EpcTft::PacketFilter::Matches does not use ipv6 address to match an IP packet
- Bug 2860 - mobility: Set Z coordinate for position-allocation classes
- Bug 2893 - lte: GetPgw in helper should be const
- Bug 3027 - lte: S1 signalling is done before RRC connection establishment is finished
- #11 - mobility: Rectangle::GetClosestSide returns the correct side also for positions outside the rectangle
- #53 - Token Bank Fair Queue Scheduler is creating a transmit opportunity of 0 bytes
- #54 - RadioBearerStats are not correctly connected

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.29
============

This release is dedicated to the memory of project co-founder George Riley.

Availability
------------
This release is available from:
https://www.nsnam.org/release/ns-allinone-3.29.tar.bz2

Supported platforms
-------------------
This release is intended to work on systems with the following minimal
requirements (Note:  not all features available on all platforms):
- g++-4.9 or later
- Apple LLVM version 7.0.2 or later 
- clang-3.3 or later

In addition, Python 2.7 (Python 2 series) or Python 3.4-3.7 (Python 3 series) 

This release has been tested on the following platforms:
- Ubuntu 18.04 (64 bit) with g++-7.3.0 and Python 2.7.15